fix summary height on mobile

--- a/src/styles/scss/components/_recipes.scss
+++ b/src/styles/scss/components/_recipes.scss
@@ -83,7 +83,7 @@
 			background-size: 100px;
 			color: #fff;
 			position: relative;
-			height: 250px;
+			height: 320px;
 			width: 100%;
 			
 			@include mq(small) {
